opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_hash"
bug-reports: "https://github.com/janestreet/ppx_hash/issues"
dev-repo: "git+https://github.com/janestreet/ppx_hash.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "jbuilder"                {build & >= "1.0+beta8"}
  "ppx_compare"
  "ppx_core"
  "ppx_driver"
  "ppx_metaquot"
  "ppx_sexp_conv"
  "ppx_type_conv"
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
A ppx rewriter that generates hash functions from type expressions and definitions

Part of the Jane Street's PPX rewriters collection.
"
