opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_hash"
bug-reports: "https://github.com/janestreet/ppx_hash/issues"
dev-repo: "git+https://github.com/janestreet/ppx_hash.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_hash/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppx_compare"
  "ppx_sexp_conv"
  "ppxlib_jane"
  "dune"          {>= "2.0.0"}
  "ppxlib"        {>= "0.28.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A ppx rewriter that generates hash functions from type expressions and definitions"
description: "
Part of the Jane Street's PPX rewriters collection.
"
